<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home</string>
    <string name="title_home">Home</string>
    <string name="title_search_price">社區成交行情</string>
    <string name="title_search_history">查詢紀錄</string>
    <string name="title_feedback">給予回饋</string>
    <string name="title_logout">登出</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- General -->
    <string name="dialog_progress_searching">搜尋中&#8230;</string>
    <string name="dialog_progress_login">登入中&#8230;</string>
    <string name="dialog_progress">處理中&#8230;</string>
    <string name="alert_dialog_ok_btn">確認</string>
    <string name="alert_dialog_cancel_btn">取消</string>
    <string name="alert_dialog_msg_leave">是否要離開當前頁面？</string>
    <string name="alert_dialog_msg_logout">是否要結束程式？</string>
    <string name="alert_dialog_msg_feedback">是否要傳送意見回饋？</string>
    <string name="alert_dialog_no_result">查無資料</string>
    <string name="alert_dialog_no_network">請檢查您的網路連線是否正常。</string>
    <string name="btn_empty"></string>
    <string name="tip_question_mark">(?)</string>
    
    <!-- Login -->
    <string name="login_text">登入</string>
    <string name="login_username">帳號：</string>
    <string name="login_username_hint">請輸入您的 E-Mail</string>
    <string name="login_password">密碼：</string>
    <string name="login_password_hint">請輸入您的密碼</string>
    <string name="login_btn">登入</string>
    <string name="login_fb_btn">Facebook 登入</string>

    <!-- Login -->
    <string name="register_text">註冊帳號</string>
    <string name="register_username">帳號：</string>
    <string name="register_username_hint">請輸入您的 E-Mail</string>
    <string name="register_password">密碼：</string>
    <string name="register_password_hint">請輸入您的密碼</string>
    <string name="register_chk_password">確認密碼：</string>
    <string name="register_chk_password_hint">請輸入您的密碼</string>
    <string name="register_btn">註冊</string>
    <string name="register_fb_btn">使用 Facebook 註冊</string>

    <!-- Search Price-->
    <string name="search_price_title_text">社區成交行情</string>
    <string name="search_price_keyword">搜尋</string>
    <string name="search_price_btn">查詢</string>
    <string name="search_price_history_btn">查詢紀錄</string>
    <string name="search_price_keyword_hint">請輸入社區名稱或地址</string>
    <string name="search_price_result_title_text">請問您指的是‧‧‧？</string>
    <string name="search_price_search_again_btn">重新查詢</string>

    <!-- Payment Option-->
    <string name="payment_option_title">請選擇付款方案</string>
    <string name="payment_option_1">單次付費：(新台幣：30元)</string>
    <string name="payment_option_2">月租型&#160;-&#160;30 天：(新台幣：150元)</string>
    <string name="payment_option_3">月租型&#160;-&#160;90 天：(新台幣：450元)</string>
    <string name="payment_cancel_btn">取消付款</string>
    <string name="payment_buy_btn">確認付款</string>

    <!--Carpool-->
    <string name="carpool_price_cancel_btn">回上一頁</string>
    <string name="carpool_price_next_btn">設定完成</string>
    <string name="carpool_price_desc">請輸入/調整車位預估價格：</string>
    <string name="carpool_price_tip">車位價格隨市場機制波動，請您輸入車位價格以便計算單價，或由系統帶入預設值</string>
    <string name="carpool_price_item_lastfix">價格：</string>
    <string name="carpool_price_item_price_lastfix">萬</string>
    <string name="carpool_price_item_price_no_result">很抱歉，此社區目前無對應的資料</string>
    <string name="carpool_price_item_price_no_result_feedback_btn">給予回饋</string>
    <string name="carpool_price_item_price_no_result_search_btn">重新查詢</string>
    <string name="carpool_price_overprice_warning">車位價格請勿超過總價</string>

    <!--Realestate-->
    <string name="realestate_date_prefix">近</string>
    <string name="realestate_date_lastfix">月</string>
    <string name="realestate_date_range_prefix">實價登錄成交行情\n</string>
    <string name="realestate_total_price_prefix">總價區間：</string>
    <string name="realestate_unite_price_prefix">單價區間：</string>
    <string name="realestate_price_lastfix">&#160;萬</string>
    <string name="realestate_result_num_prefix">共計筆數：</string>
    <string name="realestate_result_num_lastfix">筆</string>
    <string name="realestate_trade_detail_btn">交易明細</string>
    <string name="realestate_trade_graph_btn">趨勢圖</string>
    <string name="realestate_trade_search_btn">重新查詢</string>
    <string name="realestate_trade_carprice_btn">回上一頁</string>
    <string name="realestate_date_range_1">6&#160;個月</string>
    <string name="realestate_date_range_2">12&#160;個月</string>
    <string name="realestate_date_range_3">18&#160;個月</string>
    <string name="realestate_date_range_4">24&#160;個月</string>
    <string name="realestate_dash_symbol">&#160;~&#160;</string>
    <string name="realestate_graph_desc_prefix">近&#160;</string>
    <string name="realestate_graph_desc_lastfix">&#160;個月價格趨勢圖&#160;\n(單位：萬)</string>
    <string name="realestate_trade_detail_desc_prefix">近&#160;</string>
    <string name="realestate_trade_detail_desc_lastfix">&#160;個月交易明細</string>
    <string name="realestate_trade_detail_column_1">項目</string>
    <string name="realestate_trade_detail_column_2">交易年月</string>
    <string name="realestate_trade_detail_column_3">交易樓層</string>
    <string name="realestate_trade_detail_column_4">總價</string>
    <string name="realestate_trade_detail_column_5">單價</string>
    <string name="realestate_trade_detail_column_6">總面積</string>
    <string name="realestate_trade_detail_column_7">交易筆棟數</string>
    <string name="realestate_trade_detail_column_8">特殊備註</string>
    <string name="realestate_trade_detail_column_8_lastfix">：</string>
    <string name="realestate_trade_detail_column_level_lastfix">&#160;樓</string>
    <string name="realestate_trade_detail_column_size_lastfix">&#160;坪</string>

    <!--Tip-->
    <string name="tip_org_column_1">行政中心：</string>
    <string name="tip_org_column_2">地區：</string>
    <string name="tip_org_column_3">社區名稱：</string>
    <string name="tip_org_column_4">建築完成日期：</string>
    <string name="tip_org_column_5">區間門牌：</string>
    <string name="tip_org_column_5_lastfix">&#160;號</string>
    <string name="tip_org_column_6">總樓層：</string>
    <string name="tip_org_column_6_lastfix">&#160;樓</string>
    <string name="tip_org_column_7">類型：</string>
    <string name="tip_org_column_8_divider">：</string>
    <string name="tip_date_range">根據內政部實價登錄資訊僅提供兩個月前社區成交行情，故近六個月行情已可抓得到的行情往前回推六個月計算</string>
    <string name="tip_total_price">含車位總價</string>
    <string name="tip_unit_price">(總價-車位總價)/(總坪數-車位總坪數)=單價</string>
    <string name="tip_total_size">含車位面積</string>
    <string name="tip_extra">因特殊移轉,可能較不具參考價值</string>
    <string name="tip_close_btn">關閉</string>
    <string name="tip_date_range_empty">此日期區間無資料</string>

    <!--Search History -->
    <string name="search_history_date_prefix">查詢時間：</string>

    <!--Feedback-->
    <string name="feedback_email">mailto:stanley411vm@gmail.com</string>
    <string name="feedback_title">【社區成交行情】意見回饋</string>
    <string name="feedback_content">感謝您提供意見！</string>

</resources>
