<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#ff414141">

    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop" />

	<TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="@dimen/start_title_textsize"
        android:layout_marginTop="@dimen/start_title_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_btn_margin_big"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/login_btn_height"
            android:layout_below="@+id/login_password_column"
            android:layout_centerHorizontal="true"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/login_btn_text_size"
            android:textStyle="bold"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/login_margin"
            android:alpha="0.7"/>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/login_btn_height"
            android:layout_below="@+id/login_password_column"
            android:layout_centerHorizontal="true"
            android:text="@string/register_btn"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/login_btn_text_size"
            android:textStyle="bold"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/login_margin"
            android:alpha="0.7"/>
    </LinearLayout>

    

</RelativeLayout>
