<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/search_background"
        android:scaleType="centerCrop"
        />
-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_zone"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/search_price_margin"
        android:text="@string/search_price_title_text"
        android:textColor="#333333"
        android:textSize="@dimen/search_price_title_text_size" />

    <RelativeLayout
        android:id="@+id/search_zone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_price_zone_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/search_price_margin"
        android:padding="@dimen/search_price_padding">

        <RelativeLayout
            android:id="@+id/search_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/search_price_column_margin_top">

            <EditText
                android:id="@+id/search_keyword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_price_edittext_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/search_price_keyword_hint"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:paddingLeft="@dimen/search_price_edittext_padding"
                android:paddingRight="@dimen/search_price_edittext_padding"
                android:background="#ffdcdcdc"
                android:textColor="#ff4f4f4f"
                android:singleLine="true"
                android:alpha="0.8">

            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_column"
            android:layout_margin="@dimen/search_price_btn_margin"
            android:orientation="horizontal">
            <Button
                android:id="@+id/search_btn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="@dimen/search_price_btn_height"
                android:layout_centerHorizontal="true"
                android:text="@string/search_price_btn"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/search_price_btn_text_size"
                android:background="@drawable/button_custom"
                android:layout_margin="@dimen/search_price_btn_margin_s"
                android:textStyle="bold" />
            <Button
                android:id="@+id/search_history_btn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="@dimen/search_price_btn_height"
                android:layout_centerHorizontal="true"
                android:text="@string/search_price_history_btn"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/search_price_btn_text_size"
                android:background="@drawable/button_custom"
                android:layout_margin="@dimen/search_price_btn_margin_s"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
